deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lmf
  labels:
    name: lmf
    istio-injection: enabled
